<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".authentications.VerifyCodeSentActivity">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:theme="@style/InputLayout"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/verifyCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_code"
            android:inputType="number"
            android:singleLine="true"
            android:textSize="18dp" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/verifyPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/code_sent"
        android:textSize="16dp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_marginTop="30dp"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/btnVerifyProgress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/border2"
            android:textColor="@color/white"
            android:textSize="16dp" />

        <Button
            android:id="@+id/btnVerify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/border2"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="16dp" />
    </FrameLayout>

</LinearLayout>