<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/filter_all"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:foreground="?android:selectableItemBackground"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/user_photo"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:fontFamily="@font/ralewaylight"
            android:text="@string/filter_all"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/filter_gold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:foreground="?android:selectableItemBackground"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_gold"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:fontFamily="@font/ralewaylight"
            android:text="@string/filter_gold"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/filter_silver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:clickable="true"
        android:foreground="?android:selectableItemBackground"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_silver"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:fontFamily="@font/ralewaylight"
            android:text="@string/filter_silver"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/filter_bronze"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:clickable="true"
        android:foreground="?android:selectableItemBackground"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_bronze"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:fontFamily="@font/ralewaylight"
            android:text="@string/filter_bronze"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/filter_other"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:clickable="true"
        android:foreground="?android:selectableItemBackground"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:fontFamily="@font/ralewaylight"
            android:text="@string/filter_other"
            android:textSize="18sp" />

    </LinearLayout>


</LinearLayout>